Fix wrapping on dataset entryName

--- a/src/module/catalog/src/datasets/dataset.css
+++ b/src/module/catalog/src/datasets/dataset.css
@@ -241,8 +241,7 @@ color:#1C4CD1;
 }
 
 .datasetRow__content .entryName{
-    width: 300px;
-    width:70%;
+    width: 400px;
     padding: 15px;
     display: flex;
     flex-wrap: wrap;
@@ -257,6 +256,7 @@ color:#1C4CD1;
     color: #333;
     align-self: center;
     width: 150px;
+    margin-left:10px;
 }
 
 @media (max-width: 820px) {
